# FS_GEN

./: .env.example  .gitignore  pipeline.py  pyproject.toml
agents/: base.py  stack_specs.py  tools.py
agents/designer/: prompt.py  run.py
agents/problem_statement/: prompt.py  run.py
agents/skeleton_generator/: prompt.py  run.py
agents/solution_generator/: prompt.py  run.py
agents/test_generator/: prompt.py  run.py
agents/validator/: prompt.py  run.py
core/: config.py  database.py  orm.py  repository.py
migrations/: env.py
migrations/versions/: 3750c2e4e653_add_fsgen_stack_lessons_table.py  46092fe54fa5_initial_fsgen_tables.py
services/: db.py  file_io.py  question.py  test_runner.py
